<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
   android:gravity="center"
    tools:context=".ui.MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/ic_person"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="10dp"
       android:inputType="textPersonName"
       android:id="@+id/edtUsername"
       android:hint="@string/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:id="@+id/edtEmail"
        android:hint="@string/email_address"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:inputType="phone"
        android:id="@+id/edtPhoneNumber"
        android:hint="@string/phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:id="@+id/edtAddress"
        android:hint="@string/address"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnRegister"
        android:text="@string/register"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnViewUser"
        android:text="@string/view_user"/>





</LinearLayout>